--- a/app/src/main/res/menu/drawermenu.xml
+++ b/app/src/main/res/menu/drawermenu.xml
@@ -1,9 +1,17 @@
-<?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:id="@+id/payment" android:title="Payments" android:icon="@drawable/payment"/>
-    <item android:id="@+id/booking" android:title="Bookings" android:icon="@drawable/booking"/>
-    <item android:id="@+id/kyc" android:title="KYC" android:icon="@drawable/kyc"/>
-    <item android:id="@+id/offer" android:title="Offers" android:icon="@drawable/offer"/>
-    <item android:id="@+id/help" android:title="Help" android:icon="@drawable/help"/>
-    <item android:id="@+id/logout" android:title="Logout" android:icon="@drawable/logout"/>
+<?xml version="1.0" encoding="UTF-8"?>
+
+    <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <item android:title="Payments" android:icon="@drawable/payment" android:id="@+id/payment"/>
+
+    <item android:title="Bookings" android:icon="@drawable/booking" android:id="@+id/booking"/>
+
+    <item android:title="KYC" android:icon="@drawable/kyc" android:id="@+id/kyc"/>
+
+    <item android:title="Offers" android:icon="@drawable/offer" android:id="@+id/offer"/>
+
+    <item android:title="Help" android:icon="@drawable/help" android:id="@+id/help"/>
+
+    <item android:title="Logout" android:icon="@drawable/logout" android:id="@+id/logout"/>
+
 </menu>
