--- a/app/src/main/res/layout/activity_passenger_home.xml
+++ b/app/src/main/res/layout/activity_passenger_home.xml
@@ -1,19 +1,7 @@
-<?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Passenger_home">
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <Button
-        android:layout_width="50dp"
-        android:layout_height="30dp"
-        android:id="@+id/btnMap"
-        android:text="Map"
-        tools:ignore="MissingConstraints" />
+    <androidx.constraintlayout.widget.ConstraintLayout tools:context=".Passenger_home" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-
-
+   <Button android:layout_height="30dp" android:layout_width="50dp" tools:ignore="MissingConstraints" android:text="Map" android:id="@+id/btnMap"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
