--- a/app/src/main/res/layout/activity_permissions.xml
+++ b/app/src/main/res/layout/activity_permissions.xml
@@ -1,50 +1,18 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".PermissionsActivity"
-    android:padding="32dp">
+    <RelativeLayout android:padding="32dp" tools:context=".PermissionsActivity" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher" />
+ <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:gravity="center_horizontal" android:orientation="vertical">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Permission Request"
-            android:textSize="24sp"
-            android:layout_marginTop="12dp"
-            android:fontFamily="sans-serif-condensed"
-            android:textStyle="bold"/>
+ <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:src="@mipmap/ic_launcher"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
-            android:layout_marginTop="36dp"
-            android:text="Places Project needs permission to acces device location to provide required services. Please allow the permission"/>
+ <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:textStyle="bold" android:fontFamily="sans-serif-condensed" android:layout_marginTop="12dp" android:textSize="24sp" android:text="Permission Request"/>
 
-    </LinearLayout>
+ <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:gravity="center_horizontal" android:layout_marginTop="36dp" android:text="Places Project needs permission to acces device location to provide required services. Please allow the permission"/>
 
-    <Button
-        android:id="@+id/btn_perm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        android:textColor="#FFFFFF"
-        android:text="Grant Permission"
-        android:textAllCaps="false" />
+</LinearLayout>
+
+ <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:text="Grant Permission" android:textAllCaps="false" android:textColor="#FFFFFF" android:background="@color/colorPrimary" android:layout_alignParentBottom="true" android:id="@+id/btn_perm"/>
 
 </RelativeLayout>
