--- a/app/src/main/res/layout/content_map.xml
+++ b/app/src/main/res/layout/content_map.xml
@@ -1,146 +1,52 @@
-<?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".MapActivity"
-    tools:showIn="@layout/activity_map"
-    android:orientation="vertical"
-    >
+<?xml version="1.0" encoding="UTF-8"?>
 
-    <!--<fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
--->
-    <com.skyfishjy.library.RippleBackground
-        android:id="@+id/ripple_bg"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        app:rb_color="#0099CC"
-        app:rb_duration="3000"
-        app:rb_radius="32dp"
-        app:rb_rippleAmount="4"
-        app:rb_scale="6"
-        android:layout_alignParentLeft="true">
+    <RelativeLayout android:orientation="vertical" tools:showIn="@layout/activity_map" tools:context=".MapActivity" app:layout_behavior="@string/appbar_scrolling_view_behavior" android:layout_height="match_parent" android:layout_width="match_parent" xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@drawable/ic_placeholder"
-            android:translationY="-18dp" /> <!--flaticon.com -->
-    </com.skyfishjy.library.RippleBackground>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    <com.mancj.materialsearchbar.MaterialSearchBar
-
-        style="@style/MaterialSearchBarLight"
-        app:mt_speechMode="false"
-        app:mt_hint="Search a place"
-        app:mt_maxSuggestionsCount="10"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etOrigin"
-        android:layout_margin="16dp"
-        app:mt_navIconEnabled="true"
-        android:elevation="5dp"
-        android:outlineProvider="bounds"
-        app:mt_placeholder="Search a place"
-        android:layout_marginBottom="50dp"/>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="80dp">
-    <com.mancj.materialsearchbar.MaterialSearchBar
-        style="@style/MaterialSearchBarLight"
-        app:mt_speechMode="false"
-        app:mt_hint="Search a place"
-        app:mt_maxSuggestionsCount="5"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etDestination"
-        android:layout_margin="16dp"
-        app:mt_navIconEnabled="true"
-        android:elevation="5dp"
-        android:outlineProvider="bounds"
-        app:mt_placeholder="Search a place"
-
-        />
-    </LinearLayout>
+    <!--<fragment android:id="@+id/map" android:name="com.google.android.gms.maps.SupportMapFragment" android:layout_width="match_parent" android:layout_height="match_parent" /> -->
 
 
-    <!--<EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etOrigin"
-        android:layout_marginTop="30dp"/>
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/etDestination"
-        android:layout_marginTop="80dp"/>
--->
+    <com.skyfishjy.library.RippleBackground android:layout_height="match_parent" android:layout_width="match_parent" android:layout_alignParentLeft="true" app:rb_scale="6" app:rb_rippleAmount="4" app:rb_radius="32dp" app:rb_duration="3000" app:rb_color="#0099CC" android:layout_alignParentStart="true" android:id="@+id/ripple_bg">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="150dp"
-        >
+    <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:translationY="-18dp" android:src="@drawable/ic_placeholder" android:layout_centerInParent="true"/>
 
-        <ImageView
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_distance"/>
-        <TextView
-            android:layout_marginLeft="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0 km"
-            android:id="@+id/tvDistance" />
+    <!--flaticon.com -->
 
-        <ImageView
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:padding="5dp"
-            android:src="@drawable/ic_clock"/>
-        <TextView
-            android:layout_marginLeft="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0 min"
-            android:id="@+id/tvDuration" />
-    </LinearLayout>
 
-    <Button
-        android:id="@+id/btn_find"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Find a trip"
-        android:textColor="#FFFFFF"
-        android:background="@color/colorPrimary"
-        android:layout_margin="16dp"
-        android:textStyle="bold"/>
+</com.skyfishjy.library.RippleBackground>
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+
+    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent">
+
+    <com.mancj.materialsearchbar.MaterialSearchBar android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/etOrigin" android:layout_marginBottom="50dp" app:mt_placeholder="Search a place" android:outlineProvider="bounds" android:elevation="5dp" app:mt_navIconEnabled="true" android:layout_margin="16dp" app:mt_maxSuggestionsCount="10" app:mt_hint="Search a place" app:mt_speechMode="false" style="@style/MaterialSearchBarLight"/>
+
+</LinearLayout>
+
+
+    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="80dp">
+
+    <com.mancj.materialsearchbar.MaterialSearchBar android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/etDestination" app:mt_placeholder="Search a place" android:outlineProvider="bounds" android:elevation="5dp" app:mt_navIconEnabled="true" android:layout_margin="16dp" app:mt_maxSuggestionsCount="5" app:mt_hint="Search a place" app:mt_speechMode="false" style="@style/MaterialSearchBarLight"/>
+
+</LinearLayout>
+
+    <!--<EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/etOrigin" android:layout_marginTop="30dp"/> <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/etDestination" android:layout_marginTop="80dp"/> -->
+
+
+
+    <LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:layout_width="match_parent" android:layout_marginTop="150dp">
+
+    <ImageView android:layout_height="40dp" android:layout_width="40dp" android:src="@drawable/ic_distance" android:layout_marginTop="5dp" android:layout_marginLeft="20dp"/>
+
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvDistance" android:layout_marginLeft="5dp" android:text="0 km"/>
+
+    <ImageView android:layout_height="40dp" android:layout_width="40dp" android:src="@drawable/ic_clock" android:layout_marginTop="5dp" android:layout_marginLeft="20dp" android:padding="5dp"/>
+
+    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/tvDuration" android:layout_marginLeft="5dp" android:text="0 min"/>
+
+</LinearLayout>
+
+    <Button android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/btn_find" android:layout_margin="16dp" android:text="Find a trip" android:textStyle="bold" android:background="@color/colorPrimary" android:textColor="#FFFFFF" android:layout_alignParentBottom="true"/>
+
+    <fragment android:layout_height="match_parent" android:layout_width="match_parent" android:id="@+id/map" android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
 </RelativeLayout>
