--- a/app/src/main/res/layout/retro_lv1.xml
+++ b/app/src/main/res/layout/retro_lv1.xml
@@ -61,7 +61,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:id="@+id/request_id"
-            android:text="jkhjvgggv"/>
+            android:text="jkhjvgggv"
+            android:visibility="invisible"/>
 
         <!--<LinearLayout
             android:layout_width="match_parent"
@@ -94,6 +95,7 @@
 -->
 
     </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
@@ -129,4 +131,4 @@
 
     </LinearLayout>
 
-    </FrameLayout>
+        </FrameLayout>
